--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
                 <div class="line line3 toggle"></div>
             </div>
             <div class="nat flex">
-                <a href="#about"><img class="infinite-spin" src="../images/pinwheel-dark-gradient.svg" alt="white-pinwheel-vector-origami-logo"></a>
+                <a href="#about"><img class="infinite-spin" src="../images/pinwheel-dark-gradient.svg" alt="gradient-pinwheel-vector-origami-logo"></a>
                 <div class="dark-light-switch">
                     <input type="checkbox" id="toggle" class="checkbox">
                     <label class="flick flex" for="toggle">
@@ -121,7 +121,7 @@
                 </li>
             </ul>
             <article class="aboutme flex container-eight">
-                <ul class="">
+                <ul>
                     <li class="flex">I'm a junior Web Developer living in Paris, previously working in international communications, and always up for learning new things.</li>
                     <li class="flex">At the crossroads between UX/UI design and Front-End Development, I aim to create neat, minimalist, and responsive websites. I strive for simplicity, clarity, and purity in my work.</li>
                     <li class="flex">The technologies I usually use are HTML5, CSS3, JavaScript, Python and React, and I prototype with Figma.</li>
@@ -196,17 +196,17 @@
 
             <button class="flex skillsbutton"><a href="https://www.linkedin.com/in/nathaliepiat/">Read more</a></button>
         </section>
+
         <section id="loop">
             <div class="loop-line">
-                <h4 class="loop-word">#FluentEnglishFrench #InternationalCommunications #DigitalContent #MedTech  #CommunityManagement #SocialMedia #WebDev #FrontEnd #Code #EyeForDetails #FastLearner #CreativeSpirit #HealthTech #Design #Photography #Art #ActiveListening #Caring #Fairness #MoveForward #MobileFirst #HTML #CSS #JavaScript #JQuery #React #Python #Figma #Wordpress #WomenInTech #GirlsCanCode #InCodeWeTrust #BeYourself #KeepOnLearning #Inclusiveness #Patience #Motivation #CatMum #TeaAddict #CoffeeLover #SheHer #Commitment #NeverGiveUp #BadAss #WeAreNotWaiting #Loop #WebDeveloper #GitLog #GitStatus #GitInit #GitAdd #GitCommit #GitPush #FluentEnglishFrench #InternationalCommunications #DigitalContent #MedTech  #CommunityManagement #SocialMedia #WebDev #FrontEnd #Code #EyeForDetails #FastLearner #CreativeSpirit #HealthTech #Design #Photography #Art #ActiveListening #Caring #Fairness #MoveForward #MobileFirst #HTML #CSS #JavaScript #JQuery #React #Python #Figma #Wordpress #WomenInTech #GirlsCanCode #InCodeWeTrust #BeYourself #KeepOnLearning #Inclusiveness #Patience #Motivation #CatMum #TeaAddict #CoffeeLover #SheHer #Commitment #NeverGiveUp #BadAss #WeAreNotWaiting #Loop #WebDeveloper #GitLog #GitStatus #GitInit #GitAdd #GitCommit #GitPush
-                </h4>
+                <h4 class="loop-word">#FluentEnglishFrench #InternationalCommunications #DigitalContent #MedTech  #CommunityManagement #SocialMedia #WebDev #FrontEnd #Code #EyeForDetails #FastLearner #CreativeSpirit #HealthTech #Design #Photography #Art #ActiveListening #Caring #Fairness #MoveForward #MobileFirst #HTML #CSS #JavaScript #JQuery #React #Python #Figma #Wordpress #WomenInTech #GirlsCanCode #InCodeWeTrust #BeYourself #KeepOnLearning #Inclusiveness #Patience #Motivation #CatMum #TeaAddict #CoffeeLover #SheHer #Commitment #NeverGiveUp #BadAss #WeAreNotWaiting #Loop #WebDeveloper #GitLog #GitStatus #GitInit #GitAdd #GitCommit #GitPush #FluentEnglishFrench #InternationalCommunications #DigitalContent #MedTech  #CommunityManagement #SocialMedia #WebDev #FrontEnd #Code #EyeForDetails #FastLearner #CreativeSpirit #HealthTech #Design #Photography #Art #ActiveListening #Caring #Fairness #MoveForward #MobileFirst #HTML #CSS #JavaScript #JQuery #React #Python #Figma #Wordpress #WomenInTech #GirlsCanCode #InCodeWeTrust #BeYourself #KeepOnLearning #Inclusiveness #Patience #Motivation #CatMum #TeaAddict #CoffeeLover #SheHer #Commitment #NeverGiveUp #BadAss #WeAreNotWaiting #Loop #WebDeveloper #GitLog #GitStatus #GitInit #GitAdd #GitCommit #GitPush</h4>
             </div>
         </section>
 
         <!-- PROJECTS -->
         <section id="projects" class="projects">
             <h3 class="projectstitle flex">Selected projects</h3>
-            <img class="weatherpic flex" src="../images/worldweather.png" alt="">
+            <img class="weatherpic flex" src="../images/worldweather.png" alt="world-weather-app-screen-shot-blue-purple">
             <!-- <video autoplay muted loop id="myvideo">
                 <source src="..images/weatherapp.mov" type="video/mp4">
             </video> -->
@@ -214,38 +214,37 @@
                 <h5>Weather app</h5>
                 <p>Getting the weather in real time absolutely everywhere in the  world! One of my first proper interactive web pages - coded in HTML, CSS, JavaScript, and using two APIs.<br><a href="https://natcancode.github.io/worldweather/static/index.html">Want to try it?</a></p>
             </article>
-            <img class="medtechpic" src="../images/medtech-homepage.png" alt="">
+            <img class="medtechpic" src="../images/medtech-homepage.png" alt="medtech-homepage-obey-picture-cream-green">
             <article class="medtechtext flex">
                 <h5>Simplon #Hackeuses Certification Award</h5>
                 <p>My very first website project - English and French pages - presented to a jury of professional web developers. Certification subject: "Women and tech - I code therefore I am".<br>#Hackeuses jury prize awarded for the <a href="https://natcancode.github.io/medtech/english.html">website design</a> and subject originality.</p>
             </article>
-            <img class="picsharepic" src="../images/picshare-homepage.png" alt="">
+            <img class="picsharepic" src="../images/picshare-homepage.png" alt="picshare-homepage-dog-picture-gallery-blue-navy-white">
             <article class="picsharetext flex">
                 <h5>PicShare</h5>
                 <p>Team project at Matrice building a website to share images using an SQLite database. Users being able to upload their own images and other users being able to view and comment the images. </p>
             </article>
-            <img class="swipepic" src="../images/photoswipe.png" alt="">
-            <!-- <iframe class="swipepic" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FP02EZ2EAEK2dZGPIht44au%2FPhotoSwipe-UX%3Fpage-id%3D0%253A1%26node-id%3D14%253A170%26viewport%3D241%252C48%252C0.22%26scaling%3Dscale-down%26starting-point-node-id%3D2%253A113" allowfullscreen></iframe> -->
+            <img class="swipepic" src="../images/photoswipe.png" alt="swipepic-homepage-animal-imahge-gallery-pink-black-white">
             <article class="swipetext flex">
                 <h5>PhotoSwipe</h5>
-                <p>Teamwork on Design Thinking, persona, UX/UI design, and prototyping with Figma.</p>
+                <p>Teamwork on Design Thinking, persona, UX/UI design, and <a href="https://www.figma.com/proto/P02EZ2EAEK2dZGPIht44au/PhotoSwipe-UX?page-id=0%3A1&node-id=2%3A239&viewport=277%2C48%2C0.19&scaling=scale-down&starting-point-node-id=2%3A113">   prototyping with Figma</a>. The objective of this business unit project was to simulate, in scrum mode, the creation of a photo sorting platform, with speed and efficiency.</p>
             </article>
-            <img class="flourshowerpic" src="../images/flourshower.png" alt="">
+            <img class="flourshowerpic" src="../images/flourshower.png" alt="bakery-homepage-white-blue-yellow">
             <article class="flourshowertext flex">
                 <h5>Flour Shower</h5>
                 <p>Fully responsive HTML/CSS pages built from mockups. The job was not to re-design a 5-page bakery website but to faithfully implement the provided visuals with a clean code. This is where I got hooked on grids, and titles that overlap blocks!<br>I got bonus points awarded for the embedded GoogleMaps information on the contact page! <br>You can navigate through the <a href="https://natcancode.github.io/flourshowerproject/flourshower3.html">project pages</a> clicking on the buttons and the About, Contact, Unavoidable, Amazing links on the header and footer.</p>
             </article>
-            <img class="eshoppic" src="../images/eshop-terra.png" alt="">
+            <img class="eshoppic" src="../images/eshop-terra.png" alt="eshop-women-clothes-homepage-cream-black-oldpink">
             <article class="eshoptext flex">
                 <h5>Terra E-shop</h5>
                 <p><a href="https://natcancode.github.io/EcommerceTerra/">E-shop website</a> project built at Simplon. Special focus made on UX/UI design from the landing page to the basket and payment pages. <br>Mobile first approach, JavaScript title animation, and carousel.</p>
             </article>
-            <img class="imagegallerypic" src="../images/image-gallery-animation.png" alt="">
+            <img class="imagegallerypic" src="../images/image-gallery-animation.png" alt="image-gallery-page-pink-flower-black-background-pink-caption">
             <article class="imagegallerytext flex">
                 <h5>Image gallery animation</h5>
                 <p>Personal project on <a href="https://natcancode.github.io/image-gallery-animation/">image gallery animation</a> with JavaScript. Fluid image pop-up with a preview caption. The images are clickable - they expand when clicked and the caption is displayed.</p>
             </article>
-            <img class="jsanimationspic" src="../images/letter-animations.png" alt="">
+            <img class="jsanimationspic" src="../images/letter-animations.png" alt="cream-camera-addict-title-camera-picture-black-background">
             <article class="jsanimationstext flex">
                 <h5>Letter animations</h5>
                 <p>Personal project on <a href="https://natcancode.github.io/loading-letter-animation/">letter animations</a> with JavaScript using JS libraries - Anime and ScrollReveal - and creation of a letter loader effect in case of poor network.</p>
@@ -264,6 +263,20 @@
             <h4 class="phototitle flex">Selected pictures</h4>
         </section>    -->
 
+        <!-- STYLE GUIDE -->
+        <section id="style">
+            <h3 class="styletitle flex">Style Guide</h3>
+            <h6 class="styleNP flex">NP</h6>
+            <h5 class="cormorant flex">Cormorant light</h5>
+            <h4 class="montserrat flex">Montserrat regular</h4>
+            <h5 class="stylecream flex">#FFFFF4</h5>
+            <h5 class="stylecreamdarker flex">#F8F8EA</h5>
+            <h5 class="stylecountdownlight flex">#DDC2AE</h5>
+            <h5 class="stylecountdown flex">#CDA382</h5>
+            <h5 class="styledarkbackground flex">#322F3D</h5>
+        </section>
+
+        <!-- COUNTDOWN -->
         <section id="countdown">
             <h3  class="countdowntext grow-small">My Tech Manager <br>training at <a href="https://matrice.io/ecole/tech-front" class="grow-small">Matrice</a><br>ends soon!</h3>
             <div class="countdown flex"
