--- a/static/french.html
+++ b/static/french.html
@@ -131,19 +131,27 @@
 
         <!-- SKILLS -->
         <section id="skills" data-scroll-section>
-            <h2 class="softskillstitle flex" data-scroll data-scroll-speed="1">Soft skills</h2>
-            <img class="icon1 flex" data-scroll src="../images/eye-dark-gradient.svg"></img>
+            <h2 class="softskillstitle flex" data-scroll data-scroll-speed="1">Soft<br>skills</h2>
+            <!-- <img class="icon1 flex" data-scroll src="../images/eye-dark-gradient.svg"></img>
             <img class="icon2 flex" data-scroll src="../images/learner-dark-gradient.svg"></img>
             <img class="icon3 flex" data-scroll src="../images/creative-dark-gradient.svg"></img>
-            <img class="icon4 flex" data-scroll src="../images/solver-dark-gradient.svg"></img>
-            <li class="skill1 flex" data-scroll>Souci du detail</li>
-            <li class="skill2 flex" data-scroll>Apprend rapidement</li>
-            <li class="skill3 flex" data-scroll>Esprit créatif</li>
-            <li class="skill4 flex" data-scroll>Résolution de problèmes</li>
+            <img class="icon4 flex" data-scroll src="../images/solver-dark-gradient.svg"></img> -->
+            <li class="skill1 soft flex" data-scroll data-scroll-speed="1"><h5>Souci<br>du detail</h5></li>
+            <li class="skill2 soft flex" data-scroll data-scroll-speed="5"><h5>Apprend<br>rapidement</h5></li>
+            <li class="skill3 soft flex" data-scroll data-scroll-speed="1"><h5>Esprit<br>créatif</h5></li>
+            <li class="skill4 soft flex" data-scroll data-scroll-speed="5"><h5>Résolution<br>de problèmes</h5></li>
 
-            <h2 class="hardskillstitle flex" data-scroll data-scroll-speed="1">Hard skills</h2>
-            <div id="hardskills" class="hardskillsbars flex" data-scroll>
-                <div class="align flex">
+            <h2 class="hardskillstitle flex" data-scroll data-scroll-speed="1">Hard<br>skills</h2>
+            <!-- <div id="hardskills" class="hardskillsbars flex" data-scroll> -->
+            <img class="hard flex html"  data-scroll data-scroll-speed="1" src="../images/html.svg" alt="black-html-icon">
+            <img class="hard flex css"  data-scroll data-scroll-speed="1" src="../images/css.svg" alt="black-css-icon">
+            <img class="hard flex js"  data-scroll data-scroll-speed="1" src="../images/js.svg" alt="black-js-icon">
+            <img class="hard flex figm"  data-scroll data-scroll-speed="1" src="../images/figm.svg" alt="black-figma-icon">
+            <img class="hard flex react"  data-scroll data-scroll-speed="1" src="../images/react.svg" alt="black-react-icon">
+            <img class="hard flex py" data-scroll data-scroll-speed="1" src="../images/py.svg" alt="black-python-icon">
+            <img class="hard flex wp"  data-scroll data-scroll-speed="1" src="../images/wp.svg" alt="black-wordpress-icon">
+            <img class="hard flex gith"  data-scroll data-scroll-speed="1" src="../images/gith.svg" alt="black-github-icon">
+                <!-- <div class="align flex">
                     <p class="hardtitle">HTML5</p>
                     <div class="bar">
                         <div class="inside inside1"></div>
@@ -184,9 +192,8 @@
                         <div class="inside inside6"></div>
                     </div>
                     <h5>85%</h5>
-                </div>
-            </div>
-
+                </div> -->
+            <!-- </div> -->
             <button class="flex skillsbutton" data-scroll data-scroll-speed="1"><a href="https://www.linkedin.com/in/nathaliepiat/">Pour en savoir plus</a></button>
         </section>
 
@@ -212,15 +219,21 @@
                 <h3 data-scroll>Prix #Hackeuses Simplon</h3>
                 <p data-scroll>Mon tout premier project de site web, en français et en anglais, présenté devant un jury de développeurs professionnels. Thème de la certification : "Femmes et numérique, je code donc je suis".<br>Prix du jury #Hackeuses reçu pour le <a href="https://natcancode.github.io/medtech/english.html">design du site</a> et l'originalité du sujet.</p>
             </article>
-            <img class="picsharepic" data-scroll data-scroll-speed="1" src="../images/picshare-homepage.png" alt="picshare-homepage-dog-picture-gallery-blue-navy-white">
+            <!-- <img class="picsharepic" data-scroll data-scroll-speed="1" src="../images/picshare-homepage.png" alt="picshare-homepage-dog-picture-gallery-blue-navy-white">
             <article class="picsharetext flex" data-scroll data-scroll-speed="1">
                 <h3 data-scroll>PicShare</h3>
                 <p data-scroll>Projet de groupe réalisé à Matrice : création d'un site web pour partager des images en utilisant une base de données SQLite. Les utilisateurs peuvent uploader des visuels, que d'autres utilisateurs peuvent voir et commenter.</p>
-            </article>
+            </article> -->
             <img class="swipepic" data-scroll data-scroll-speed="1" src="../images/photoswipe.png" alt="swipepic-homepage-animal-imahge-gallery-pink-black-white">
             <article class="swipetext flex" data-scroll data-scroll-speed="1">
                 <h3 data-scroll>PhotoSwipe</h3>
                 <p data-scroll>Travail d'équipe sur le Design Thinking, persona, UX/UI design dans le but de créer un <a href="https://www.figma.com/proto/P02EZ2EAEK2dZGPIht44au/PhotoSwipe-UX?page-id=0%3A1&node-id=2%3A239&viewport=277%2C48%2C0.19&scaling=scale-down&starting-point-node-id=2%3A113">prototype sur Figma</a>. L'objectif de ce projet "business unit" était de simuler, en mode scrum, la création d'une plateforme de tri de photos, avec rapidité et efficacité.</p>
+            </article>
+            <img class="emojipic" data-scroll data-scroll-speed="1" src="../images/emoji-garden.png" alt="emoji-garden-game-planting-and-growing-plants-to-trees">
+            <article class="emojitext flex" data-scroll data-scroll-speed="1">
+                <h3 data-scroll>Emoji Garden</h3>
+                <p data-scroll>Jeu Emoji Garden réalisé avec React.js en traduisant les exigences de l'interface utilisateur en composants React.
+                Lorsque vous cliquez sur le bouton "Planter un emoji", un nouvel emoji apparaît dans une cellule disponible du jardin. En cliquant sur un emoji existant, vous le supprimez du jardin. Un emoji sera planté en tant que jeune poussse 🌱 Il devient automatiquement une plante 🌿 puis un arbre 🌳 <br>Vous voulez <a href="https://natcancode.github.io/emoji-garden/">jouer</a> ?</p>
             </article>
             <img class="flourshowerpic" data-scroll data-scroll-speed="1" src="../images/flourshower.png" alt="bakery-homepage-white-blue-yellow">
             <article class="flourshowertext flex">
