--- a/static/index.html
+++ b/static/index.html
@@ -131,18 +131,26 @@
 
         <!-- SKILLS -->
         <section id="skills" data-scroll-section>
-            <h2 class="softskillstitle flex" data-scroll data-scroll-speed="1">Soft skills</h2>
-            <img class="icon1 flex" data-scroll src="../images/eye-dark-gradient.svg"></img>
+            <h2 class="softskillstitle flex" data-scroll data-scroll-speed="1">Soft<br>skills</h2>
+            <!-- <img class="icon1 flex" data-scroll src="../images/eye-dark-gradient.svg"></img>
             <img class="icon2 flex" data-scroll src="../images/learner-dark-gradient.svg"></img>
             <img class="icon3 flex" data-scroll src="../images/creative-dark-gradient.svg"></img>
-            <img class="icon4 flex" data-scroll src="../images/solver-dark-gradient.svg"></img>
-            <li class="skill1 flex" data-scroll>Eye for details</li>
-            <li class="skill2 flex" data-scroll>Fast learner</li>
-            <li class="skill3 flex" data-scroll>Creative spirit</li>
-            <li class="skill4 flex" data-scroll>Problem solver</li>
+            <img class="icon4 flex" data-scroll src="../images/solver-dark-gradient.svg"></img> -->
+            <li class="skill1 soft flex" data-scroll data-scroll-speed="1"><h5>Eye<br>for details</h5></li>
+            <li class="skill2 soft flex" data-scroll data-scroll-speed="5"><h5>Fast<br>learner</h5></li>
+            <li class="skill3 soft flex" data-scroll data-scroll-speed="1"><h5>Creative<br>spirit</h5></li>
+            <li class="skill4 soft flex" data-scroll data-scroll-speed="5"><h5>Problem<br>solver</h5></li>
             
-            <h2 class="hardskillstitle flex" data-scroll data-scroll-speed="1">Hard skills</h2>
-            <div id="hardskills" class="hardskillsbars flex" data-scroll>
+            <h2 class="hardskillstitle flex" data-scroll data-scroll-speed="1">Hard<br>skills</h2>
+            <img class="hard flex html"  data-scroll data-scroll-speed="1" src="../images/html.svg" alt="black-html-icon">
+            <img class="hard flex css"  data-scroll data-scroll-speed="1" src="../images/css.svg" alt="black-css-icon">
+            <img class="hard flex js"  data-scroll data-scroll-speed="1" src="../images/js.svg" alt="black-js-icon">
+            <img class="hard flex figm"  data-scroll data-scroll-speed="1" src="../images/figm.svg" alt="black-figma-icon">
+            <img class="hard flex react"  data-scroll data-scroll-speed="1" src="../images/react.svg" alt="black-react-icon">
+            <img class="hard flex py" data-scroll data-scroll-speed="1" src="../images/py.svg" alt="black-python-icon">
+            <img class="hard flex wp"  data-scroll data-scroll-speed="1" src="../images/wp.svg" alt="black-wordpress-icon">
+            <img class="hard flex gith"  data-scroll data-scroll-speed="1" src="../images/gith.svg" alt="black-github-icon">
+            <!-- <div id="hardskills" class="hardskillsbars flex" data-scroll>
                 <div class="align flex">
                     <p class="hardtitle">HTML5</p>
                     <div class="bar">
@@ -185,8 +193,7 @@
                     </div>
                     <h5>85%</h5>
                 </div>
-            </div>
-
+            </div> -->
             <button class="flex skillsbutton" data-scroll data-scroll-speed="1"><a href="https://www.linkedin.com/in/nathaliepiat/">Read more</a></button>
         </section>
 
@@ -212,15 +219,21 @@
                 <h3 data-scroll>Simplon #Hackeuses Certification Award</h3>
                 <p data-scroll>My very first website project - English and French pages - presented to a jury of professional web developers. Certification subject: "Women and tech - I code therefore I am".<br>#Hackeuses jury prize awarded for the <a href="https://natcancode.github.io/medtech/english.html">website design</a> and subject originality.</p>
             </article>
-            <img class="picsharepic" data-scroll data-scroll-speed="1" src="../images/picshare-homepage.png" alt="picshare-homepage-dog-picture-gallery-blue-navy-white">
+            <!-- <img class="picsharepic" data-scroll data-scroll-speed="1" src="../images/picshare-homepage.png" alt="picshare-homepage-dog-picture-gallery-blue-navy-white">
             <article class="picsharetext flex" data-scroll data-scroll-speed="1">
                 <h3 data-scroll>PicShare</h3>
                 <p data-scroll>Team project at Matrice building a website to share images using an SQLite database. Users being able to upload their own images and other users being able to view and comment the images. </p>
-            </article>
+            </article> -->
             <img class="swipepic" data-scroll data-scroll-speed="1" src="../images/photoswipe.png" alt="swipepic-homepage-animal-imahge-gallery-pink-black-white">
             <article class="swipetext flex" data-scroll data-scroll-speed="1">
                 <h3 data-scroll>PhotoSwipe</h3>
                 <p data-scroll>Teamwork on Design Thinking, persona, UX/UI design, and <a href="https://www.figma.com/proto/P02EZ2EAEK2dZGPIht44au/PhotoSwipe-UX?page-id=0%3A1&node-id=2%3A239&viewport=277%2C48%2C0.19&scaling=scale-down&starting-point-node-id=2%3A113">   prototyping with Figma</a>. The objective of this business unit project was to simulate, in scrum mode, the creation of a photo sorting platform, with speed and efficiency.</p>
+            </article>
+            <img class="emojipic" data-scroll data-scroll-speed="1" src="../images/emoji-garden.png" alt="emoji-garden-game-planting-and-growing-plants-to-trees">
+            <article class="emojitext flex" data-scroll data-scroll-speed="1">
+                <h3 data-scroll>Emoji Garden</h3>
+                <p data-scroll>Emoji Garden game made with React.js translating UI requirements into React components.
+                When you click the “Plant an Emoji” button, a new emoji appears in an available cell of the garden. Clicking on an existing emoji will delete it from the garden. An emoji will be planted as a sprout 🌱 It then automatically grows into a plant 🌿 then a treen 🌳 <br>Would you like to <a href="https://natcancode.github.io/emoji-garden/">play</a>?</p>
             </article>
             <img class="flourshowerpic" data-scroll data-scroll-speed="1" src="../images/flourshower.png" alt="bakery-homepage-white-blue-yellow">
             <article class="flourshowertext flex" data-scroll data-scroll-speed="1">
@@ -247,7 +260,6 @@
                 <h5>First UI design</h5>
                 <p>Very first project on Figma. The goal was to rethink the design of a website full of UI mistakes. <br>I had a blast discovering this new tool!</p>
             </article> -->
-
             <a href="#projects"><p class="up flex" data-scroll>Up</p></a>
         </section>
 
