--- a/static/french.html
+++ b/static/french.html
@@ -233,7 +233,7 @@
             <article class="emojitext flex" data-scroll data-scroll-speed="1">
                 <h3 data-scroll>Emoji Garden</h3>
                 <p data-scroll>Jeu Emoji Garden réalisé avec React.js en traduisant les exigences de l'interface utilisateur en composants React.
-                Lorsque vous cliquez sur le bouton "Planter un emoji", un nouvel emoji apparaît dans une cellule disponible du jardin. En cliquant sur un emoji existant, vous le supprimez du jardin. Un emoji sera planté en tant que jeune poussse 🌱 Il devient automatiquement une plante 🌿 puis un arbre 🌳 <br>Vous voulez <a href="https://natcancode.github.io/emoji-garden/">jouer</a> ?</p>
+                Lorsque vous cliquez sur le bouton "Planter un emoji", un nouvel emoji apparaît dans une cellule disponible du jardin. Une jeune poussse 🌱 est plantée. Elle devient automatiquement une plante 🌿 puis un arbre 🌳 En cliquant sur un emoji existant, vous le supprimez du jardin.<br>Vous voulez <a href="https://natcancode.github.io/emoji-garden/">jouer</a> ?</p>
             </article>
             <img class="flourshowerpic" data-scroll data-scroll-speed="1" src="../images/flourshower.png" alt="bakery-homepage-white-blue-yellow">
             <article class="flourshowertext flex">
