--- a/static/index.html
+++ b/static/index.html
@@ -233,7 +233,7 @@
             <article class="emojitext flex" data-scroll data-scroll-speed="1">
                 <h3 data-scroll>Emoji Garden</h3>
                 <p data-scroll>Emoji Garden game made with React.js translating UI requirements into React components.
-                When you click the “Plant an Emoji” button, a new emoji appears in an available cell of the garden. Clicking on an existing emoji will delete it from the garden. An emoji will be planted as a sprout 🌱 It then automatically grows into a plant 🌿 then a treen 🌳 <br>Would you like to <a href="https://natcancode.github.io/emoji-garden/">play</a>?</p>
+                When you click the “Plant an Emoji” button, a new emoji appears in an available cell of the garden. An emoji will be planted as a sprout 🌱 It then automatically grows into a plant 🌿 then a treen 🌳 Clicking on an existing emoji will delete it from the garden.<br>Would you like to <a href="https://natcancode.github.io/emoji-garden/">play</a>?</p>
             </article>
             <img class="flourshowerpic" data-scroll data-scroll-speed="1" src="../images/flourshower.png" alt="bakery-homepage-white-blue-yellow">
             <article class="flourshowertext flex" data-scroll data-scroll-speed="1">
