--- a/static/french.html
+++ b/static/french.html
@@ -120,7 +120,7 @@
                 <ul data-scroll>
                     <li class="flex" data-scroll data-scroll-speed="1">Je suis développeuse web et j'habite à Paris. J'ai de l'expérience dans la communication internationale, et apprendre de nouvelles choses chaque jour est mon moteur.</li>
                     <li class="flex" data-scroll data-scroll-speed="1">A la frontière entre l'UX/UI design et développement Front-End, j'aime créer des sites web épurés et responsive. Je recherche la simplicité, la clarté, et la pureté dans mon travail.</li>
-                    <li class="flex" data-scroll data-scroll-speed="1">Les technologies que j'utilise sont HTML5, CSS3, JavaScript, React.js et Python, et je prototype avec Figma.</li>
+                    <li class="flex" data-scroll data-scroll-speed="1">Les technologies que j'utilise sont HTML5, CSS3, JavaScript, React.js, Swift et Python, et je prototype avec Figma.</li>
                     <li class="flex" data-scroll data-scroll-speed="1">Je suis totalement accro au café ET au thé, je suis inspirée par mes pairs et mes collègues, mon petit coeur, mon partenaire, mon chat ronchon, et tout ce qui touche à la photographie, et aux innovations dans le secteur de la MedTech.</li>
                     <li class="flex" data-scroll data-scroll-speed="1">Je prends plaisir à construire et développer des projects qui peuvent contribuer à rendre le monde meilleur.</li>
                     <li class="work" data-scroll data-scroll-speed="1">On travaille ensemble ?</li>
