--- a/static/index.html
+++ b/static/index.html
@@ -120,7 +120,7 @@
                 <ul data-scroll>
                     <li class="flex" data-scroll data-scroll-speed="1">I'm a junior Web Developer living in Paris, previously working in international communications, and always up for learning new things.</li>
                     <li class="flex" data-scroll data-scroll-speed="1">At the crossroads between UX/UI design and Front-End Development, I aim to create neat, minimalist, and responsive websites. I strive for simplicity, clarity, and purity in my work.</li>
-                    <li class="flex" data-scroll data-scroll-speed="1">The technologies I usually use are HTML5, CSS3, JavaScript, React.js and Python, and I prototype with Figma.</li>
+                    <li class="flex" data-scroll data-scroll-speed="1">The technologies I usually use are HTML5, CSS3, JavaScript, React.js, Swift and Python, and I prototype with Figma.</li>
                     <li class="flex" data-scroll data-scroll-speed="1">I’m a coffee AND tea addict, inspired by my peers and colleagues, my little one, my partner, my grumpy cat, anything and everything photography related, and MedTech innovation.</li>
                     <li class="flex" data-scroll data-scroll-speed="1">I take pride in building and developing projects that can help make the world a better place.</li>
                     <li class="work" data-scroll data-scroll-speed="1">Interested in working together?</li>
