--- a/static/index.html
+++ b/static/index.html
@@ -317,7 +317,7 @@
             <a href="mailto:nathalie.piat1@gmail.com"><h3 data-scroll data-scroll-speed="1" class="touch">Get in touch.</h3></a>    
         </div>
         <a href="#header"><img class="logo rotation" src="../images/pinwheelFFFFF4.svg" alt="white-pinwheel-vector-logo"></a>
-        <p class="copyright flex">© Nathalie Piat, 2021. Made with ♡</p>
+        <p class="copyright flex">© Nathalie Piat, 2021-2022. Made with ♡</p>
         <div class="socialmedia flex">
             <a href="https://www.linkedin.com/in/nathaliepiat/"><img class="linkedin" src="../images/linkedinFFFFF4.svg" alt="linkedin-icon"></a>
             <a href="https://www.twitter.com/nathaliepiat/ "><img class="twitter" src="../images/twitterFFFFF4.svg" alt="twitter-icon"></a>
